<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_wallpaper"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/vollkorn_italic"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/intro"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_image_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_image_2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_image_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/vollkorn_italic"
                android:paddingLeft="25dp"
                android:text="@string/direction"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/vollkorn_italic"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/vollkorn_italic"
                android:paddingLeft="35dp"
                android:text="@string/tlf"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/vollkorn_italic"
                android:paddingLeft="35dp"
                android:paddingBottom="20dp"
                android:text="@string/whatsApp"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>